--- a/html/style.css
+++ b/html/style.css
@@ -1,22 +1,6 @@
 body {font-family: Helvetica, Arial, Sans-Serif;}
-.infoTable {
-border: 1px solid black;
-border-collapse: collapse;
-th, td {
-padding: 6px;
-border: 1px solid black;
-}
-th {
-text-align: center;
-color: white;
-background-color: #348dd8;
-}
-tr:nth-child(even) {
-background: #CCC;
-text-align: left;
-}
-tr:nth-child(odd) {
-background: #FFF;
-text-align: left;
-}
-}
+table {border: 1px solid black;border-collapse: collapse;}
+th, td {padding: 6px;}
+th {background-color: #348dd8;color: white;text-align: center;}
+tr:nth-child(even) {border: 1px solid black;background: #CCC;text-align: left;}
+tr:nth-child(odd) {background: #FFF;text-align: left;}
